--- a/dev/less/styles.main.less
+++ b/dev/less/styles.main.less
@@ -1,3 +1,13 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+ul {
+	list-style: none;
+}
+a {
+	text-decoration: none;
+}
 @import "inc/vars.less";
 @import "inc/header.less";
 @import "inc/footer.less";
