--- a/dev/less/styles.main.less
+++ b/dev/less/styles.main.less
@@ -5,10 +5,7 @@
 ul {
 	list-style: none;
 }
-a {
-	text-decoration: none;
-}
-@import "inc/vars.less";
-@import "inc/header.less";
-@import "inc/main.less";
-@import "inc/footer.less";
+@import "vars.less";
+@import "header.less";
+@import "main.less";
+@import "footer.less";
