--- a/dev/less/header.less
+++ b/dev/less/header.less
@@ -8,9 +8,7 @@ header {
 	background-color: #454f58;
 	opacity: 0.85;
 }
-nav {
-	margin-bottom: 270px;
-}
+.logo {
 	h1 {
 		margin-top: 0;
 		a {
@@ -20,13 +18,23 @@ nav {
 			line-height: 24px;
 			text-transform: uppercase;
 			color: #fff;
+			&:hover {
+				color: #fff;
+			}
 			span {
 				color: @blueasy;
 			}
 		}
 	}
-	.menu {
+}
+.navbar-default {
+	margin-bottom: 270px;
+	background-color: transparent;
+	border: none;
+}
+	.nav.navbar-nav {
 		padding-top: 5px;
+		float: right;
 		li {
 			padding: 0 15px;
 			border: 2px solid transparent;
@@ -40,6 +48,7 @@ nav {
 				}
 			}
 			a {
+				padding: 0;
 				color: #fff;
 				font-family: "Segoe UI";
 				font-size: 12px;
