--- a/dev/less/header.less
+++ b/dev/less/header.less
@@ -8,7 +8,16 @@ header {
 	background-color: #454f58;
 	opacity: 0.85;
 }
+.navigation {
+		margin-bottom: 270px;
+		@media (max-width: 991px) {
+			margin-bottom: 150px;
+		}
+}
 .logo {
+	@media (max-width: 991px) {
+		text-align: center;
+	}
 	h1 {
 		margin-top: 0;
 		a {
@@ -27,20 +36,29 @@ header {
 		}
 	}
 }
+nav.navbar-default {
+	@media (max-width: 991px) {
+		margin: 0 auto;
+	}
+}
 .navbar-default {
-	margin-bottom: 270px;
+	margin-right: -30px;
+	float: right;
 	background-color: transparent;
 	border: none;
-}
+	button {
+		margin: 0;
+	}
 	.nav.navbar-nav {
-		padding-top: 5px;
-		float: right;
 		li {
 			padding: 0 15px;
 			border: 2px solid transparent;
 			margin-right: 30px;
 			height: 35px;
 			display: inline-block;
+			&:last-child {
+				margin: 0;
+			}
 			&:hover {
 				border: 2px solid #4bcaff;
 				a {
@@ -64,6 +82,7 @@ header {
 			}
 		}
 	}
+}
 .quote {
 	text-align: center;
 	p {
