--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -2,6 +2,9 @@
 	padding: 80px 0;
 }
 .head {
+	@media (max-width: 991px) {
+		text-align: center;
+	}
 		margin: 0 0 123px 0;
 		position: relative;
 		color: #fff;
@@ -15,7 +18,7 @@
 			position: absolute;
 			left: 2%;
 			bottom: -35%;
-			
+
 			width: 45px;
 			height: 2px;
 			background-color: #fff;
@@ -24,11 +27,31 @@
 .white-bg {
 		color: #67737a;
 	}
+	.center {
+		&:after {
+			@media (max-width: 991px) {
+				left: 42%;
+			}
+		}
+	}
+	div.navbar-default {
+		margin: 0;
+		.nav.navbar-nav {
+			li {
+				a {
+					color: #626f76;
+				}
+			}
+		}
+	}
 .services {
 	padding: 80px 0;
 	background-color: @blueasy;
 	.description {
 		h5 {
+			@media (max-width: 991px) {
+				text-align: center;
+			}
 			position: relative;
 			color: #fff;
 			font-family: "Segoe UI";
@@ -40,10 +63,10 @@
 				content: "";
 				position: absolute;
 				top:-300%;
-				
+
 				width: 48px;
 				height: 48px;
-				
+
 				background-image: url(../img/sprite/sprite.png);
 				background-repeat: no-repeat;
 			}
@@ -52,30 +75,38 @@
 			&:before {
 				width: 34px;
 				height: 48px;
-				background-position: -177px 0; 
+				background-position: -177px 0;
 			}
 		}
 		.post-two {
 			&:before {
-				background-position: -128px -48px; 
+				background-position: -128px -48px;
 			}
 		}
 		.post-three {
 			&:before {
-				background-position: 0 -128px; 
+				background-position: 0 -128px;
 			}
 		}
 		.post-four {
 			&:before {
-				background-position: -128px 0; 
+				background-position: -128px 0;
 			}
 		}
 		p {
+			@media (max-width: 991px) {
+				text-align: center;
+			}
 			color: #fff;
 			font-family: "Segoe UI";
 			font-size: 12px;
 			font-weight: 600;
 			line-height: 18px;
+		}
+	}
+	.indent-xs {
+		@media (max-width: 991px) {
+			margin-bottom: 80px;
 		}
 	}
 }
@@ -84,22 +115,22 @@
 		&:after {
 			background-color: #67737a;
 		}
-		
 	}
-	.portf {
-		a {
-			color: #515f67;
-		}
-		.checking {
+	.nav.navbar-nav {
 			a {
-				color: @blueasy;
+				color: #515f67;
 			}
-		}
+			.checking {
+				a {
+					color: @blueasy;
+				}
+			}
 	}
 	.portf-img {
 		margin-bottom: 30px;
 		height: 270px;
 		position: relative;
+		background-size: cover;
 		a.add {
 			position: absolute;
 			display: none;
@@ -108,7 +139,7 @@
 			font-size: 72px;
 			font-weight: 300;
 			line-height: 24px;
-			text-transform: uppercase;	
+			text-transform: uppercase;
 		}
 		&:hover {
 			a {
@@ -151,6 +182,9 @@
 		margin-bottom: 50px;
 	}
 	p {
+		@media (max-width: 991px) {
+			text-align: center;
+		}
 		color: #ffffff;
 		font-family: "Segoe UI";
 		font-size: 14px;
@@ -158,6 +192,10 @@
 		line-height: 24px;
 	}
 	.visit {
+		@media (max-width: 991px) {
+			margin: 10px auto;
+
+		}
 		margin-top: 36px;
 		width: 140px;
 		height: 45px;
@@ -172,10 +210,9 @@
 			text-transform: uppercase;
 		}
 	}
-	.video {
-		height: 313px;
-		background-image: url(../img/vimeo.png);
-	}
+}
+.twit-bg {
+	background-color: @blueasy;
 }
 .twitter {
 	position: relative;
@@ -187,7 +224,7 @@
 			position: absolute;
 			top: 0;
 			left: 98%;
-			
+
 			width: 28px;
 			height: 22px;
 			background-image: url(../img/twitter.png);
@@ -211,8 +248,13 @@
 }
 .john-doe {
 	background-image: url(../img/main-bg-1.png);
+	background-size: cover;
+	background-repeat: no-repeat;
 	background-position: center;
 	p {
+		@media (max-width: 991px) {
+			text-align: center;
+		}
 		color: #ffffff;
 		font-family: "Segoe UI";
 		font-size: 14px;
@@ -220,8 +262,11 @@
 		line-height: 24px;
 	}
 	.networks {
+		@media (max-width: 991px) {
+			text-align: center;
+		}
 		li {
-			margin-right: 20px;
+			margin-right: 5px;
 			display: inline-block;
 			a {
 				width: 64px;
@@ -266,7 +311,12 @@
 }
 .contact {
 	background-image: url(../img/main-bg-2.png);
+	background-repeat: no-repeat;
+	background-size: cover;
 	background-position: center;
+	h3 {
+		margin-bottom: 30px;
+	}
 	label {
 		color: #ffffff;
 		font-family: "Segoe UI";
@@ -285,6 +335,9 @@
 		height: 60px;
 	}
 	p {
+		@media (max-width: 991px) {
+			margin: 5px;
+		}
 		margin-bottom: 39px;
 		color: #ffffff;
 		font-family: "Segoe UI";
@@ -300,12 +353,16 @@
 		line-height: 24px;
 	}
 	button {
+		@media (max-width: 991px) {
+			display: block;
+			margin: 30px auto 0;
+		}
 		margin-top: 40px;
-		width: 370px;
+		width: 60%;
 		height: 60px;
 		background-color: @blueasy;
 		border-radius: 0;
-		
+
 		color: #ffffff;
 		font-family: "Segoe UI";
 		font-size: 14px;
