--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -113,19 +113,62 @@ main {
 	}
 	.portfolio {
 		.head {
+			@media (max-width: 768px) {
+				margin-bottom: 20px;
+			}
 			&:after {
 				background-color: #67737a;
 			}
 		}
-		.nav.navbar-nav {
+		.nav.nav-pills {
+			.navbar-default;
+			.navbar-default > .nav.navbar-nav;
+			li {
+					margin-right: 10px;
 				a {
-					color: #515f67;
-				}
-				.checking {
-					a {
-						color: @blueasy;
+					&:hover {
+						background-color: transparent;
 					}
+					color: #626f76;
 				}
+			}
+		}
+		.nav-320 {
+			display: none;
+		}
+		@media (max-width: 768px) {
+			.nav-320 {
+				display: block;
+				li {
+					margin-bottom: 15px;
+					width: 100%;
+					height: 20px;
+					text-align: center;
+					&:last-child {
+						margin-bottom: 40px;
+					}
+						a {
+							display: block;
+							border-bottom: 2px solid #626f76;
+							color: #626f76;
+							font-family: "Segoe UI";
+							font-size: 20px;
+							font-weight: 700;
+							line-height: 34px;
+							text-transform: uppercase;
+							&:hover {
+								color: @blueasy;
+								border-bottom: 2px solid @blueasy;
+							}
+						}
+					}
+					.checking {
+						a {
+							color: @blueasy;
+							border-bottom: 2px solid @blueasy;
+						}
+				}
+			}
 		}
 		.portf-img {
 			margin-bottom: 30px;
