--- a/dev/less/header.less
+++ b/dev/less/header.less
@@ -1,18 +1,34 @@
 .navbar-default {
-	margin-right: -30px;
-	float: right;
 	background-color: transparent;
 	border: none;
 	button {
 		margin: 0;
 	}
+	h1 {
+		margin-top: 0;
+		a {
+			font-family: "Segoe UI";
+			font-size: 30px;
+			font-weight: 700;
+			line-height: 24px;
+			text-transform: uppercase;
+			color: #fff;
+			&:hover {
+				color: #fff;
+			}
+			span {
+				color: @blueasy;
+			}
+		}
+	}
 	.nav.navbar-nav {
+		margin-top: 2px;
+		float: right;
 		li {
+			margin-right: 20px;
 			padding: 0 15px;
 			border: 2px solid transparent;
-			margin-right: 30px;
 			height: 35px;
-			display: inline-block;
 			&:last-child {
 				margin: 0;
 			}
@@ -38,10 +54,18 @@
 				color: #4bcaff;
 			}
 		}
+		@media (max-width: 767px) {
+			margin-top: 0;
+			float: none;
+			li {
+				margin: 0;
+			}
+		}
 	}
 }
 header {
 	height: 800px;
+	position: relative;
 	background-image: url(../img/header-bg-pic.png);
 	.nav-wrap {
 		padding-top: 54px;
@@ -49,40 +73,15 @@ header {
 		background-color: #454f58;
 		opacity: 0.85;
 	}
-	.navigation {
-			margin-bottom: 270px;
-			@media (max-width: 991px) {
-				margin-bottom: 150px;
-			}
-	}
-	.logo {
-		@media (max-width: 991px) {
-			text-align: center;
-		}
-		h1 {
-			margin-top: 0;
-			a {
-				font-family: "Segoe UI";
-				font-size: 30px;
-				font-weight: 700;
-				line-height: 24px;
-				text-transform: uppercase;
-				color: #fff;
-				&:hover {
-					color: #fff;
-				}
-				span {
-					color: @blueasy;
-				}
-			}
-		}
-	}
 	nav.navbar-default {
 		@media (max-width: 991px) {
 			margin: 0 auto;
 		}
 	}
 	.quote {
+		position: absolute;
+		top: 40%;
+		left: 10%;
 		text-align: center;
 		p {
 			color: #fff;
@@ -91,6 +90,12 @@ header {
 			font-weight: 300;
 			line-height: 75px;
 			text-transform: uppercase;
+		}
+		@media (max-width: 767px) {
+			left:0;
+			p {
+				font-size: 32px;
+			}
 		}
 	}
 }
